--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -23,6 +23,21 @@ services:
       retries: 10
     # networks:
     #   - data-network
+  inject-adw14:
+    hostname: inject-adw14
+    container_name: inject-adw14
+    build:
+      context: ../adw14
+      dockerfile: Dockerfile
+    profiles:
+      - inject
+    depends_on:
+      - oltp
+    environment:
+      OLTP_DB_HOST: ${OLTP_DB_HOST:-oltp}
+      OLTP_DB_USER: ${OLTP_DB_USER:-adventureworks}
+      OLTP_DB_PASSWORD: ${OLTP_DB_PASSWORD:-adventureworks}
+      OLTP_DB_NAME: ${OLTP_DB_NAME:-adventureworks}
 
 # ==================================================
 # Networks configuration
